--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
 *, *::after, *::before {
   box-sizing: border-box;
 }
+
+body {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "sidebar header"
+    "sidebar" "main";
+}
+
+header {
+  grid-area: header;
+}
+
+.sidebar {
+  grid-area: sidebar;
+}
+
+main {
+  grid-area: main;
+}
