Fix template-areas declaration

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@
 body {
   display: grid;
   grid-template-columns: 1fr 5fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
   grid-template-areas:
     "sidebar header"
-    "sidebar" "main";
+    "sidebar main";
 }
 
 header {
