--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
 }
 
 body {
+  font-family: system-ui, sans-serif;
+  line-height: 1.3;
+
   display: grid;
   grid-template-columns: 1fr 5fr;
   grid-template-rows: repeat(2, 1fr);
