--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,12 @@ header {
   grid-area: sidebar;
 }
 
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 main {
   grid-area: main;
 }
