--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,15 @@ header {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: grid;
+}
+
+nav ul:first-child {
+  grid-template-rows: repeat(6, 1fr);
+}
+
+nav ul:last-child {
+  grid-template-rows: repeat(3, 1fr);
 }
 
 main {
