--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
   display: grid;
   grid-template-columns: 1fr 5fr;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
   grid-template-areas:
     "sidebar header"
     "sidebar main";
@@ -44,18 +44,18 @@ header {
 }
 
 nav ul:first-child {
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(6, auto);
 }
 
 nav ul:last-child {
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
 }
 
 main {
   grid-area: main;
   display: grid;
   grid-template-columns: 4fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: repeat(2, auto);
   grid-template-areas:
     "projects announcements"
     "projects trending";
