Turn .projects into a grid container

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,9 @@ main {
 
 .projects {
   grid-area: projects;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, auto);
 }
 
 .announcements {
