--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,15 @@ header {
 
 .sidebar {
   grid-area: sidebar;
+  color: var(--fg-sidebar);
+  background-color: var(--bg-sidebar);
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.sidebar > div {
+  font-size: 1.5rem;
+  margin-bottom: 40px;
 }
 
 .sidebar ul {
@@ -53,10 +62,12 @@ header {
   padding: 0;
   margin: 0;
   display: grid;
+  gap: 14px;
 }
 
 nav ul:first-child {
   grid-template-rows: repeat(6, auto);
+  margin-bottom: 40px;
 }
 
 nav ul:last-child {
