Add dashboard icon

--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,21 @@ header {
   padding: 14px;
 }
 
+.sidebar svg {
+  fill: var(--fg-sidebar);
+}
+
 .sidebar > div {
   font-size: 1.5rem;
   margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  gap: 10px
+}
+
+.sidebar > div svg {
+  width: 50px;
+  height: 50px;
 }
 
 .sidebar ul {
