Add margin to .search

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ header {
   grid-template-columns: 1fr 6fr 1fr 1fr 1fr 2fr;
   align-items: center;
   gap: 12px;
+  margin: 12px 0;
 }
 
 .search svg {
