Increase font weight of profile name

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,10 @@ header {
   justify-self: center;
 }
 
+.search div:last-child {
+  font-weight: 700;
+}
+
 .account-actions {
   display: grid;
   grid-template-columns: 1fr 6fr repeat(3, 1fr);
