--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ header {
   grid-area: sidebar;
   color: var(--fg-sidebar);
   background-color: var(--bg-sidebar);
-  font-size: 1.2rem;
+  font-size: 1.22rem;
   font-weight: 700;
   padding: 14px;
 }
@@ -127,28 +127,28 @@ header {
 
 .sidebar > div {
   font-size: 1.5rem;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
 .sidebar > div svg {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
 }
 
 .sidebar ul {
   list-style: none;
-  padding: 0;
+  padding: 0 8px;
   margin: 0;
   display: grid;
-  gap: 14px;
+  gap: 20px;
 }
 
 .sidebar ul svg {
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
 }
 
 .sidebar li {
@@ -159,7 +159,7 @@ header {
 
 nav ul:first-child {
   grid-template-rows: repeat(6, auto);
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 nav ul:last-child {
