--- a/styles.css
+++ b/styles.css
@@ -41,15 +41,15 @@ header {
 
 .search {
   display: grid;
-  grid-template-columns: 1fr 6fr 1fr 1fr 1fr 2fr;
+  grid-template-columns: 1fr 9fr 1fr 1fr 1fr 3fr;
   align-items: center;
   gap: 12px;
   margin: 12px 0;
 }
 
 .search svg {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
 }
 
 .search label {
@@ -82,6 +82,7 @@ header {
 
 .search div:last-child {
   font-weight: 700;
+  justify-self: left;
 }
 
 .account-actions {
