--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,11 @@ header {
 
 .account-actions {
   margin: 20px 0;
+  padding: 0 50px 0 15px;
   display: grid;
   grid-template-columns: 1fr 6fr repeat(3, 1fr);
   align-items: center;
-  gap: 16px;
+  gap: 24px;
 }
 
 .account-actions .profile-image {
@@ -102,11 +103,11 @@ header {
 .account-actions button {
   color: var(--fg-sidebar);
   background-color: var(--bg-sidebar);
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 600;
-  padding: 8px 22px;
+  padding: 10px 24px;
   border: none;
-  border-radius: 30px;
+  border-radius: 20px;
 }
 
 .greeting {
