--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Rubik;
+  src: url("assets/Rubik/Rubik-VariableFont_wght.woff2") format("woff2");
+}
+
 *,
 *::after,
 *::before {
@@ -16,7 +21,7 @@
 
 body {
   margin: 0;
-  font-family: system-ui, sans-serif;
+  font-family: Rubik, system-ui, sans-serif;
   line-height: 1.3;
   color: var(--fg);
   background-color: var(--bg);
