--- a/styles.css
+++ b/styles.css
@@ -198,10 +198,12 @@ main .label {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, auto);
+  gap: 24px;
 }
 
 .projects article {
   background-color: var(--bg);
+  border-radius: 6px;
 }
 
 .announcements-root {
