--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ nav ul:last-child {
 }
 
 main {
+  padding: 30px 30px 50px 20px;
   grid-area: main;
   background-color: var(--bg-main);
   display: grid;
