--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,15 @@ header {
 
 .greeting {
   justify-self: left;
+  font-weight: 700;
+}
+
+.greeting div:first-child {
+  font-size: 0.8rem;
+}
+
+.greeting div:last-child {
+  font-size: 1.3rem;
 }
 
 .sidebar {
