--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
 :root {
   --fg: #000;
   --fg-sidebar: #fff;
+  --fg-icons: #444;
   --fg-dim: #777;
   --bg: #fff;
   --bg-sidebar: #1992d4;
@@ -215,6 +216,23 @@ main .label {
 .projects article {
   background-color: var(--bg);
   border-radius: 6px;
+}
+
+.project-buttons {
+  display: grid;
+  grid-template-columns: 8fr repeat(3, 1fr);
+  justify-content: right;
+  gap: 24px;
+}
+
+.project-buttons svg:first-child {
+  grid-column: 2;
+}
+
+.project-buttons svg {
+  width: 24px;
+  height: 24px;
+  fill: var(--fg-icons);
 }
 
 .announcements-root {
