Change .projects' row sizing

--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ main .label {
 .projects {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, auto);
+  grid-template-rows: repeat(3, 1fr);
   gap: 24px;
 }
 
