--- a/styles.css
+++ b/styles.css
@@ -186,14 +186,14 @@ main {
   grid-area: main;
   background-color: var(--bg-main);
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 3fr 1fr;
   grid-template-rows: repeat(4, auto);
   grid-template-areas:
     "projects-label announcements-label"
     "projects announcements"
     "projects trending-label"
     "projects trending";
-  gap: 20px;
+  gap: 12px 20px;
 }
 
 main .label {
