--- a/styles.css
+++ b/styles.css
@@ -299,9 +299,44 @@ main .label {
 .trending {
   grid-area: trending;
   background-color: var(--bg);
+  padding: 24px;
+  border-radius: 8px;
+}
+
+.trending > div {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(2, auto);
+  margin-bottom: 24px;
+}
+
+.trending > div:last-child {
+  margin-bottom: 0;
 }
 
 .trending .profile-image {
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
+  grid-column: 1;
+  grid-row: 1 / -1;
+  align-self: center;
+}
+
+.profile-at {
+  grid-column: 2;
+  grid-row: 1;
+  font-size: 0.8rem;
+  align-self: end;
+}
+
+.profile-at::before {
+  content: "@";
+}
+
+.trending > div > div:last-child {
+  grid-column: 2;
+  grid-row: 2;
+  color: var(--fg-dim);
+  font-size: 0.8rem;
+  align-self: start;
 }
